--- a/default/app.conf
+++ b/default/app.conf
@@ -12,7 +12,6 @@ is_visible = 1
 label = EMC XtremIO App for Splunk Enterprise
 
 [launcher]
-author = Crest Data Systems
+author = Crest Data Systems / Colin Humphreys
 description = This app provides insight and monitoring for your EMC XtremIO Clusters.
-version = 1.0
-
+version = 1.0.1
